SalesforceProject/mdapipkg/unpackaged/objects/Interviewer__c.object
<CustomObject>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Interviewers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Interviewer_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Legacy Interviewer Number</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Interviewers</relationshipLabel>
        <relationshipName>Interviewers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Interviewer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>INT-{0000}</displayFormat>
        <label>Interviewer No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviewers</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Is_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Employee__c)</errorConditionFormula>
        <errorDisplayField>Employee__c</errorDisplayField>
        <errorMessage>Employee field can&apos;t be blank.</errorMessage>
    </validationRules>
</CustomObject>